added in page apply consent button

--- a/tnp/templates/company/job.html
+++ b/tnp/templates/company/job.html
@@ -181,18 +181,15 @@
                       </div>
                     {%endif %}
 
-
+                    
+                  <div class="card-action center col s12 m12">
+                      <a id="consent" name="{{ button_id }}">
+                        <i class="material-icons left">send</i>
+                        Apply Consent
+                      </a>
                   </div>
-
-                  <div class="section"> </div>
-                  <div class="center">
-                    <a class="waves-effect waves-light grey darken-2 grey-text text-lighten-5 btn-large">
-                      <i class="material-icons left">send</i>
-                      Apply Consent
-                    </a>
-                  </div>
-
                 </div>
+              </div>
           </div>
         </div>
     </div>
