added icons on apply/cancel consent button

--- a/tnp/templates/company/job.html
+++ b/tnp/templates/company/job.html
@@ -183,8 +183,8 @@
 
                     
                   <div class="card-action center col s12 m12">
-                      <a id="consent" name="{{ button_id }}">
-                        <i class="material-icons left">send</i>
+                      <a id="consent" name="{{ button_id }}" class="btn-large white">
+                        <i id="button_icon" class="material-icons left">send</i>
                         Apply Consent
                       </a>
                   </div>
