--- a/tnp/templates/consent/login_user.html
+++ b/tnp/templates/consent/login_user.html
@@ -34,7 +34,7 @@
                           </div>
                           
                           <button type="submit" class="btn grey darken-2 waves-effect grey-text text-lighten-5" value="Sign In">
-                            Sign In <i class="material-icons right">send</i>
+                            Sign In <i class="material-icons right">account_circle</i>
                           </button>
                       </form>
                     </div>
