--- a/tnp/templates/consent/home.html
+++ b/tnp/templates/consent/home.html
@@ -2,6 +2,10 @@
 
 {% block title %} Home {% endblock %}
 
+{% block custom_css %}
+  <link type="text/css" rel="stylesheet" href="/static/css/consent/home.css" media="screen,projection" />
+{% endblock %}
+
 
 {% block body_block %} 
 
@@ -14,7 +18,7 @@
               {% for company in three_companies %}
                 <div class="col s12 m4 l4">
                   <div class="card z-depth-2 hoverable">
-                    <a href=" {{ company.url }}">
+                    <a href="/company/{{ company.url }}" class="colorless">
                       <div class="card-content grey-text text-lighten-5 grey darken-2 z-depth-1">
                         <span class="card-title"> {{ company.company }} </span>
                           {% if company.badge %}
@@ -22,7 +26,6 @@
                           {% endif %}
                         <p> {{ company.designation }} </p>
                       </div>
-                    </a>
                       <table class="bordered centered responsive-table grey lighten-5">
                         <tr> 
                           <td> <strong> CTC </strong> </td>
@@ -35,16 +38,14 @@
                         </tr>
                       </table>
 
-                    <a href="/consent/home">
+                    
                       <div class="card-action grey lighten-5"> 
-                        <div class="grey-text text-darken-2" value="Apply Consent">
-                          <strong> APPLY CONSENT </strong>
-                            <i class="material-icons right">send</i>
-
+                        <div class="grey-text text-darken-2 " value="More Detils">
+                          <strong> MORE DETAILS </strong>
+                            <i class="material-icons right">arrow_drop_down_circle</i>
                         </div> 
                       </div>
                     </a>
-
                   </div>
                 </div>
               {% endfor %}
