--- a/tnp/templates/consent/login_user.html
+++ b/tnp/templates/consent/login_user.html
@@ -22,8 +22,8 @@
 
                           <div class="row">
                             <div class="input-field col s12">
-                              <input id="email" name="email" type="email" class="validate">
-                              <label for="email" class="grey-text text-darken-2">Email</label>
+                              <input id="username" name="username" type="text" class="validate">
+                              <label for="username" class="grey-text text-darken-2">Username</label>
                             </div>
                           </div>
                           <div class="row">
