--- a/tnp/templates/company/add.html
+++ b/tnp/templates/company/add.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %} Home {% endblock %}
+{% block title %} Add Company {% endblock %}
 
 {% block custom_css %}
   <link type="text/css" rel="stylesheet" href="/static/css/materialize-clockpicker.css" media="screen,projection" />
   <link type="text/css" rel="stylesheet" href="/static/css/company/add.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="/static/css/datepicker.css" media="screen,projection" />
   <link type="text/css" rel="stylesheet" href="/static/css/form.css" media="screen,projection" />
 {% endblock %}
 
@@ -21,7 +22,6 @@
                 <div class="card grey lighten-5 grey-text text-darken-2 z-depth-2 hoverable">
                     <div class="card-content grey darken-2 grey-text text-lighten-5 z-depth-2">
                       <span class="card-title">Company Information</span>
-                      <p> 
                     </div>
                     
                     <div class="section"> </div>
@@ -231,7 +231,7 @@
                                         <i class="material-icons grey-text text-darken-2 left" style="margin-top: 25px;">attach_file</i>
                                         <div class="file-field input-field">
                                              <div class="waves-effect waves-light btn grey darken-2 grey-text text-lighten-5">
-                                                Attach Fields <span class="filename">
+                                                Attach Files <span class="filename">
                                                 {{ attachment_form.file }}
                                            </span>
                                             </div>
