--- a/tnp/templates/consent/login_user.html
+++ b/tnp/templates/consent/login_user.html
@@ -36,6 +36,10 @@
                           <button type="submit" class="btn grey darken-2 waves-effect grey-text text-lighten-5" value="Sign In">
                             Sign In <i class="material-icons right">account_circle</i>
                           </button>
+
+                          <a class="btn grey darken-2 waves-effect grey-text text-lighten-5 right" value="Create Account" href="/consent/create">
+                            Create Account <i class="material-icons right">create</i>
+                          </a>
                       </form>
                     </div>
                  </div>
