--- a/tnp/templates/consent/home.html
+++ b/tnp/templates/consent/home.html
@@ -20,11 +20,16 @@
                   <div class="card z-depth-2 hoverable">
                     <a href="/company/{{ company.url }}" class="colorless">
                       <div class="card-content grey-text text-lighten-5 grey darken-2 z-depth-1">
-                        <span class="card-title"> {{ company.company }} </span>
+                        <span class="card-title truncate"> {{ company.company }} </span>
                           {% if company.badge %}
                             <span class="new badge grey lighten-5 grey-text text-darken-2" data-badge-caption="{{ company.badge }}"></span>
                           {% endif %}
-                        <p> {{ company.designation }} </p>
+
+                          {% if company.designation %}
+                            <p> {{ company.designation }} </p>
+                          {% else %}
+                            <p> &nbsp; </p>
+                          {% endif %}
                       </div>
                       <table class="bordered centered responsive-table grey lighten-5">
                         <tr> 
