consent deadline over disabled button

--- a/tnp/templates/company/job.html
+++ b/tnp/templates/company/job.html
@@ -26,7 +26,7 @@
                           <p class="right"> {{ job_category }} </p>
                         <br>
                         <p class="card-title center"> Deadline  </p>
-                        <p class="center"> <strong>{{ deadline|date:'g:i A, D'}} {{ deadline|date:'j M'}} </strong> </p>
+                        <p class="center"> <strong>{{ display_deadline|date:'g:i A, D'}} {{ display_deadline|date:'j M'}} </strong> </p>
                     </div>
 
 
