--- a/tnp/templates/consent/create_account.html
+++ b/tnp/templates/consent/create_account.html
@@ -263,46 +263,46 @@
 
 		                    <div class="row">
 		                    	<div class="input-field col s5 m2 offset-s1 offset-m1">
-		                    		<input type="number" step="0.01" name="cgpa" id="sem_1">
+		                    		<input type="number" step="0.01" min="0" max="10" name="cgpa" id="sem_1">
 		                    		<label for="sem_1"> CGPA Semester 1 </label>
 		                    	</div>
 		                    	<div class="input-field col s5 m2">
-		                    		<input type="number" step="0.01" name="cgpa" id="sem_2">
+		                    		<input type="number" step="0.01" min="0" max="10" name="cgpa" id="sem_2">
 		                    		<label for="sem_2"> CGPA Semester 2 </label>
 		                    	</div>
 		                    	<div class="input-field col s5 m2 offset-s1">
-		                    		<input type="number" step="0.01" name="cgpa" id="sem_3">
+		                    		<input type="number" step="0.01" min="0" max="10" name="cgpa" id="sem_3">
 		                    		<label for="sem_3"> CGPA Semester 3 </label>
 		                    	</div>
 		                    	<div class="input-field col s5 m2">
-		                    		<input type="number" step="0.01" name="cgpa" id="sem_4">
+		                    		<input type="number" step="0.01" min="0" max="10" name="cgpa" id="sem_4">
 		                    		<label for="sem_4"> CGPA Semester 4 </label>
 		                    	</div>
 		                    	<div class="input-field col s5 m2 offset-s1">
-		                    		<input type="number" step="0.01" name="cgpa" id="sem_5">
+		                    		<input type="number" step="0.01" min="0" max="10" name="cgpa" id="sem_5">
 		                    		<label for="sem_5"> CGPA Semester 5 </label>
 		                    	</div>
 		                    </div>
 
 		                    <div class="row">
 		                    	<div class="input-field col s5 m2 offset-s1 offset-m1">
-		                    		<input type="number" step="0.01" name="cgpa" id="sem_6">
+		                    		<input type="number" step="0.01" min="0" max="10" name="cgpa" id="sem_6">
 		                    		<label for="sem_6"> CGPA Semester 6 </label>
 		                    	</div>
 		                    	<div class="input-field col s5 m2">
-		                    		<input type="number" step="0.01" name="cgpa" id="sem_7">
+		                    		<input type="number" step="0.01" min="0" max="10" name="cgpa" id="sem_7">
 		                    		<label for="sem_7"> CGPA Semester 7 </label>
 		                    	</div>
 		                    	<div class="input-field col s5 m2 offset-s1">
-		                    		<input type="number" step="0.01" name="cgpa" id="sem_8">
+		                    		<input type="number" step="0.01" min="0" max="10" name="cgpa" id="sem_8">
 		                    		<label for="sem_8"> CGPA Semester 8 </label>
 		                    	</div>
 		                    	<div class="input-field col s5 m2">
-		                    		<input type="number" step="0.01" name="cgpa" id="sem_9">
+		                    		<input type="number" step="0.01" min="0" max="10" name="cgpa" id="sem_9">
 		                    		<label for="sem_9"> CGPA Semester 9 </label>
 		                    	</div>
 		                    	<div class="input-field col s5 m2 offset-s1">
-		                    		<input type="number" step="0.01" name="cgpa" id="sem_10">
+		                    		<input type="number" step="0.01" min="0" max="10" name="cgpa" id="sem_10">
 		                    		<label for="sem_10"> CGPA Semester 10 </label>
 		                    	</div>
 		                    </div>
