--- a/tnp/templates/consent/home.html
+++ b/tnp/templates/consent/home.html
@@ -13,53 +13,58 @@
   <div class="section"> </div>
         
       <div class="container">
-        {% for three_companies in companies_list %}
-          <div class="row">
-              {% for company in three_companies %}
-                <div class="col s12 m4 l4">
-                  <div class="card z-depth-2 hoverable">
-                    <a href="/company/{{ company.url }}" class="colorless">
-                      <div class="card-content grey-text text-lighten-5 grey darken-2 z-depth-1">
-                        <span class="card-title truncate"> {{ company.company }} </span>
-                          {% if company.badge %}
-                            <span class="new badge grey lighten-5 grey-text text-darken-2" data-badge-caption="{{ company.badge }}"></span>
-                          {% endif %}
+        {% if companies_list %}
+            {% for three_companies in companies_list %}
+              <div class="row">
+                  {% for company in three_companies %}
+                    <div class="col s12 m4 l4">
+                      <div class="card z-depth-2 hoverable">
+                        <a href="/company/{{ company.url }}" class="colorless">
+                          <div class="card-content grey-text text-lighten-5 grey darken-2 z-depth-1">
+                            <span class="card-title truncate"> {{ company.company }} </span>
+                              {% if company.badge %}
+                                <span class="new badge grey lighten-5 grey-text text-darken-2" data-badge-caption="{{ company.badge }}"></span>
+                              {% endif %}
 
-                          {% if company.designation %}
-                            <p> {{ company.designation }} </p>
-                          {% else %}
-                            <p> &nbsp; </p>
-                          {% endif %}
+                              {% if company.designation %}
+                                <p> {{ company.designation }} </p>
+                              {% else %}
+                                <p> &nbsp; </p>
+                              {% endif %}
+                          </div>
+                          <table class="bordered centered responsive-table grey lighten-5">
+                            <tr> 
+                              <td> <strong> CTC </strong> </td>
+                              {% if company.ctc %} 
+                                  <td> {{ company.ctc }} LPA </td>
+                              {% else %}
+                                  <td> NA </td>
+                              {% endif%}
+                            </tr>
+
+                            <tr> 
+                              <td> <strong> Deadline </strong> </td>
+                              <td> {{ company.deadline|date:'g:i A, j M, D' }} </td>
+                            </tr>
+                          </table>
+
+                        
+                          <div class="card-action grey lighten-5"> 
+                            <div class="grey-text text-darken-2 " value="More Detils">
+                              <strong> MORE DETAILS </strong>
+                                <i class="material-icons right">arrow_drop_down_circle</i>
+                            </div> 
+                          </div>
+                        </a>
                       </div>
-                      <table class="bordered centered responsive-table grey lighten-5">
-                        <tr> 
-                          <td> <strong> CTC </strong> </td>
-                          {% if company.ctc %} 
-                              <td> {{ company.ctc }} LPA </td>
-                          {% else %}
-                              <td> NA </td>
-                          {% endif%}
-                        </tr>
+                    </div>
+                  {% endfor %}
+              </div>
+          {% endfor %}
 
-                        <tr> 
-                          <td> <strong> Deadline </strong> </td>
-                          <td> {{ company.deadline|date:'g:i A, j M, D' }} </td>
-                        </tr>
-                      </table>
-
-                    
-                      <div class="card-action grey lighten-5"> 
-                        <div class="grey-text text-darken-2 " value="More Detils">
-                          <strong> MORE DETAILS </strong>
-                            <i class="material-icons right">arrow_drop_down_circle</i>
-                        </div> 
-                      </div>
-                    </a>
-                  </div>
-                </div>
-              {% endfor %}
-        </div>
-      {% endfor %}
+      {% else %}
+          <h5 class="center grey-text text-darken-3"> No companies are currently available for your branch! </h5>
+      {% endif %}
   </div>
 </div>
 {% endblock %}
