--- a/tnp/templates/consent/login_user.html
+++ b/tnp/templates/consent/login_user.html
@@ -2,6 +2,9 @@
 
 {% block title %} Sign In {% endblock %}
 
+{% block custom_css %}
+  <link type="text/css" rel="stylesheet" href="/static/css/form.css" media="screen,projection" />
+{% endblock %}
 
 {% block body_block %} 
 
