removed right align from create button for better mobile view

--- a/tnp/templates/consent/login_user.html
+++ b/tnp/templates/consent/login_user.html
@@ -40,9 +40,10 @@
                             Sign In <i class="material-icons right">account_circle</i>
                           </button>
 
-                          <a class="btn grey darken-2 waves-effect grey-text text-lighten-5 right" value="Create Account" href="/consent/create">
+                          <a class="btn grey darken-2 waves-effect grey-text text-lighten-5" value="Create Account" href="/consent/create">
                             Create Account <i class="material-icons right">create</i>
                           </a>
+                          
                       </form>
                     </div>
                  </div>
