frontend change: cgpa upto/of sem fields now work backwards

--- a/tnp/templates/company/add.html
+++ b/tnp/templates/company/add.html
@@ -321,6 +321,16 @@
                                     </ul>
                                 </div>
                             </div>
+
+                            <div class="row">
+                                <center class="card-content z-depth-2 teal-text text-darken-3">
+                                        <span class="row"> CGPA Upto/Of Semester field works backward! </span>
+                                        <span class="row"> Example: '-3' means the third semester from last </span>
+                                        <span class="row"> For BTech, it takes CGPA upto Sem 6 </span>
+                                        <span class="row"> For MTech, it takes CGPA upto Sem 2 </span>
+                                        <span class="row"> For MSc, it takes CGPA upto Sem 8 </span>
+                                </center>
+                            </div>
                         </div>
                     </div>
                 </div>
