--- a/tnp/templates/consent/login_user.html
+++ b/tnp/templates/consent/login_user.html
@@ -12,6 +12,17 @@
   <div class="valign-wrapper" style="width:100%;height:80%;position: absolute;">
     <div class="valign" style="width:100%;">
         <div class="container">
+            
+            {% if message %}
+              <div class="row" id="form_errors"> 
+                  <div class="col s12 m6 offset-m3">
+                     <ul class="collection center red-text">
+                        <li class="collection-item"> {{message}} </li>
+                     </ul>
+                  </div>
+              </div>
+            {% endif %}
+  
            <div class="row">
               <div class="col s12 m6 offset-m3">
                  <div class="card z-depth-4">
